<resources>
    <string name="app_name">MyRealEstate</string>
    <string name="hello">Hello</string>
    <string name="garage">Garage</string>
    <string name="apartment">Apartment</string>
    <string name="house">House</string>
    <string name="price_hint">$300.000</string>
    <string name="surface_hint">182.6</string>
    <string name="rooms_hint">4</string>
    <string name="address_hint">101 Independence Avenue, S.E</string>
    <string name="description_hint">Insert Description</string>
    <string name="agent_name">Alexandre Brancolini</string>
    <string name="agent_job">Mohammed CHAKOUCH</string>
    <string name="search_filter">Search filter</string>
    <string name="period">Period (2020/01/30)</string>
    <string name="apply_search">Apply search filter</string>
    <string name="availability">Availability</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="textview">TextView</string>
    <string name="select_property">SELECT A PROPERTY TO DISPLAY INFORMATION</string>
    <string name="place_name">Villa Sherbrook Forest,</string>
    <string name="place_location">3th place of republic</string>
    <string name="convert">CONVERT TO €</string>
    <string name="edit">EDIT PROPERTY</string>
    <string name="delete">DELETE PROPERTY</string>
    <string name="user">Alexandre</string>
    <string name="agents">Agents</string>
    <string name="creation_advert">Creation advert :</string>
    <string name="update_advert">Update advert :</string>
    <string name="interest_rate">Interest Rate :</string>
    <string name="loan_period">Loan Period :</string>
    <string name="calculate">Calculate</string>
    <string name="spec">Specifications</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="surface">Surface area</string>
    <string name="rooms">Number of rooms</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="description">Description</string>
    <string name="available">This property is available</string>
    <string name="add_property">ADD NEW PROPERTY</string>
    <string name="update_property">UPDATE PROPERTY</string>
    <string name="morning">Good Morning!</string>
    <string name="places">What place are you looking for ?</string>
    <string name ="APIKey">AIzaSyDwIiyGt3F7M6w3Xb3jELPupGwzVo_f-bE</string>
</resources>