<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/typo_grotesk"
        android:text="@string/search_filter"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/pLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView17" />


    <LinearLayout
        android:id="@+id/pLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/sLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/typo_grotesk"
            android:text="@string/price"
            android:textColor="@color/dark_grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/filterMinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/min"
            android:inputType="number" />

        <EditText
            android:id="@+id/filterMaxPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/max"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/dLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pLayout">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/typo_grotesk"
            android:text="@string/surface"
            android:textColor="@color/dark_grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/filterMinSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/min"
            android:inputType="number" />

        <EditText
            android:id="@+id/filterMaxSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/max"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/buttonFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dLayout">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/typo_grotesk"
            android:text="@string/availability"
            android:textColor="@color/dark_grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkAvailability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0"
            android:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/aLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sLayout">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/typo_grotesk"
            android:text="@string/period"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/start"
            android:inputType="date" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/end"
            android:inputType="date" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonFilter"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/typo_grotesk"
        android:text="@string/apply_search"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>